--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+label {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.centered-label {
+  display: flex;
+  justify-content: center;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
