--- a/src/components/header.css
+++ b/src/components/header.css
@@ -11,6 +11,7 @@
 .header a {
     color: black;
     text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .header nav ul {
