--- a/src/App.css
+++ b/src/App.css
@@ -7,45 +7,59 @@ label {
   justify-content: center;
 }
 
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.centered-label input[type="checkbox"] {
+  /* Hide the default checkbox */
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  /* Use a custom checkbox icon */
+  width: 20px;
+  /* Adjust size as needed */
+  height: 20px;
+  /* Adjust size as needed */
+  border: 1px solid black;
+  /* Border color */
+  border-radius: 4px;
+  /* Rounded corners */
+  outline: none;
+  /* Remove outline */
+  cursor: pointer;
+  /* Show pointer cursor */
+  /* Set initial background color */
+  background-color: #ffff9b;
+  transition: 0.3s ease;
+}
+
+/* Style the custom checkbox when checked */
+.centered-label input[type="checkbox"]:checked {
+  /* Change background color when checked */
+  background-color: #ffff9b;
+}
+
+/* Style the checkmark */
+.centered-label input[type="checkbox"]::before {
+  content: "\2713";
+  /* Unicode checkmark */
+  display: inline-block;
+  width: 100%;
+  height: 100%;
   text-align: center;
+  line-height: 20px;
+  /* Adjust based on checkbox size */
+  color: black;
+  /* Color of the checkmark */
+  font-size: 16px;
+  /* Size of the checkmark */
+  visibility: hidden;
+  /* Initially hidden */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Show the checkmark when checkbox is checked */
+.centered-label input[type="checkbox"]:checked::before {
+  visibility: visible;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.centered-label input[type="checkbox"]:hover {
+  box-shadow: 0 0 5px 5px rgb(253, 252, 166);
+  /* Apply box shadow on hover */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
