--- a/src/components/lottieone.css
+++ b/src/components/lottieone.css
@@ -3,3 +3,16 @@
     display: flex;
     justify-content: center;
 }
+
+.play-button {
+    border-radius: 20px;
+    background-color: #ffff9b;
+    border-width: 1px;
+    transition: box-shadow 0.3s ease;
+    font-family: 'Courier New', Courier, monospace;
+    cursor: pointer;
+}
+
+.play-button:hover {
+    box-shadow: 0 0 5px 5px rgb(253, 252, 166);
+}
